--- a/BerekenBoete2/Views/Shared/Bereken.cshtml
+++ b/BerekenBoete2/Views/Shared/Bereken.cshtml
@@ -3,12 +3,12 @@
     ViewData["Title"] = "Bereken";
 }
 
-<h1>Bereken</h1>
+<h1>Resultaat Bereken Boete</h1>
 
 
 @if (ViewData["Resultaat"] != null)
 {
-    <div>Resultaat: @ViewData["Resultaat"]</div>
+    <div> @ViewData["Resultaat"]</div>
 
 }
 
